[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/ui-theme.tres" type="Theme" id=1]
[ext_resource path="res://assets/space.gdshader" type="Shader" id=2]
[ext_resource path="res://assets/sprites/white360p.png" type="Texture" id=3]
[ext_resource path="res://assets/fonts/open-sans/open-sans-bold.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://scenes/menu/menu.gd" type="Script" id=5]

[sub_resource type="ShaderMaterial" id=6]
shader = ExtResource( 2 )
shader_param/iterations = 30
shader_param/formuparam = 1.3
shader_param/volsteps = 20
shader_param/stepsize = 0.1
shader_param/zoom = 0.8
shader_param/tile = 0.2
shader_param/speed = 0.008
shader_param/brightness = 0.125
shader_param/darkmatter = 0.1
shader_param/distfading = 0.65
shader_param/saturation = 0.85
shader_param/iResolution = Vector2( 192, 192 )
shader_param/iMouse = Vector2( 0, 0 )

[sub_resource type="DynamicFont" id=5]
size = 60
font_data = ExtResource( 4 )

[sub_resource type="GDScript" id=1]
script/source = "extends Label


"

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
visible = false
position = Vector2( 641, 357 )
scale = Vector2( 4, 4 )
texture = ExtResource( 3 )

[node name="Viewport" type="Viewport" parent="."]
size = Vector2( 352, 240 )

[node name="ColorRect" type="ColorRect" parent="Viewport"]
modulate = Color( 0.929412, 0.929412, 0.929412, 1 )
material = SubResource( 6 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -640.0
margin_right = 640.0
margin_bottom = 381.0

[node name="Title" type="Label" parent="CenterContainer"]
margin_left = 351.0
margin_top = 149.0
margin_right = 929.0
margin_bottom = 232.0
custom_fonts/font = SubResource( 5 )
text = "hell: retaliation"
align = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -105.0
margin_top = -102.0
margin_right = 95.0
margin_bottom = 198.0
custom_constants/separation = 16

[node name="ContinueButton" type="Button" parent="VBoxContainer"]
margin_right = 200.0
margin_bottom = 40.0
text = "CONTINUE"

[node name="PlayButton" type="Button" parent="VBoxContainer"]
margin_top = 56.0
margin_right = 200.0
margin_bottom = 126.0
rect_min_size = Vector2( 200, 70 )
focus_neighbour_bottom = NodePath("../ExitButton")
focus_next = NodePath("../ExitButton")
text = "START"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitButton" type="Button" parent="VBoxContainer"]
margin_top = 142.0
margin_right = 200.0
margin_bottom = 212.0
rect_min_size = Vector2( 200, 70 )
focus_neighbour_top = NodePath("../PlayButton")
focus_previous = NodePath("../PlayButton")
text = "EXIT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Version" type="VBoxContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = -90.0
margin_right = 198.0
margin_bottom = -18.0

[node name="GameVersion" type="Label" parent="Version"]
margin_right = 182.0
margin_bottom = 34.0
text = "<x.y.z>"

[node name="GodotVersion" type="Label" parent="Version"]
visible = false
margin_top = 38.0
margin_right = 182.0
margin_bottom = 72.0
custom_colors/font_color = Color( 0.92549, 0.92549, 0.92549, 1 )
text = "<GodotVersion>"
script = SubResource( 1 )

[node name="Credits" type="VBoxContainer" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -292.0
margin_top = -164.0
margin_right = -49.0
margin_bottom = -16.0
grow_horizontal = 0
grow_vertical = 0

[node name="MadeByLabel" type="Label" parent="Credits"]
margin_right = 243.0
margin_bottom = 34.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "made by:"

[node name="Developer1" type="Label" parent="Credits"]
margin_top = 38.0
margin_right = 243.0
margin_bottom = 72.0
grow_horizontal = 0
custom_colors/font_color = Color( 0.92549, 0.92549, 0.92549, 1 )
text = "@eliasvsimon"

[node name="Developer2" type="Label" parent="Credits"]
margin_top = 76.0
margin_right = 243.0
margin_bottom = 110.0
grow_horizontal = 0
custom_colors/font_color = Color( 0.886275, 0.87451, 0.87451, 1 )
text = "@soulpixeliv"

[node name="Developer3" type="Label" parent="."]
margin_left = 740.0
margin_top = 556.0
margin_right = 983.0
margin_bottom = 627.0
grow_horizontal = 0
custom_colors/font_color = Color( 0.886275, 0.87451, 0.87451, 1 )
text = "special thanks:
@protokrok"

[node name="Developer4" type="Label" parent="."]
margin_left = 14.0
margin_top = 677.0
margin_right = 297.0
margin_bottom = 748.0
grow_horizontal = 0
custom_colors/font_color = Color( 0.886275, 0.87451, 0.87451, 1 )
text = "song: Aviators - Skeletons"

[node name="Button" type="Button" parent="."]
visible = false
margin_left = 868.0
margin_top = 337.0
margin_right = 988.0
margin_bottom = 397.0
text = "LEVEL 1"

[connection signal="pressed" from="VBoxContainer/ContinueButton" to="." method="_on_ContinueButton_pressed"]
[connection signal="pressed" from="VBoxContainer/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
